NotifyNotification: fix annotation for add_action()

Using GFreeFunc instead of GDestroyNotify was a mistake, but
(scope async) is even a bigger mistake (one that can crash apps,
if an action is invoked multiple times)

https://bugzilla.gnome.org/show_bug.cgi?id=702390